Fix dropdown alignment

--- a/layout/Header/MainMenu/style.module.scss
+++ b/layout/Header/MainMenu/style.module.scss
@@ -7,7 +7,7 @@
   display: none;
   position: absolute;
   text-align: right;
-  right: -2rem;
+  right: -1rem;
   min-width: 160px;
   // box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
